--- a/LanchesMAC/Views/Shared/_LanchesResumo.cshtml
+++ b/LanchesMAC/Views/Shared/_LanchesResumo.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Lanche
 
 <div class="col-sm-4 col-lg-4 col-md-4">
-    <img src="@Model.ImagemUrl" class="card-img-top" />
+    <img src="@Model.ImagemUrl" height="200" width="200" class="card-img-top" />
     <div class="figure-caption">
         <h3>@Model.Preco.ToString("c")</h3>
         <h3>
