--- a/LanchesMAC/Areas/Admin/Views/AdminCategorias/Index.cshtml
+++ b/LanchesMAC/Areas/Admin/Views/AdminCategorias/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@model IEnumerable<LanchesMAC.Models.Categoria>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista";
 }
 
-<h1>Index</h1>
+<h1>Lista</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Novo</a>
 </p>
-<table class="table">
+<table class="table table-responsive">
     <thead>
         <tr>
             <th>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Descricao)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoriaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoriaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoriaId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CategoriaId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.CategoriaId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.CategoriaId">Deletar</a>
             </td>
         </tr>
 }
