--- a/LanchesMAC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/LanchesMAC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using LanchesMAC
 @using LanchesMAC.Models
 @using LanchesMAC.ViewModels
+@using ReflectionIT.Mvc.Paging
+@using System.IO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ReflectionIT.Mvc.Paging
