--- a/LanchesMAC/Views/Shared/Components/CategoriaCarrinhoCompra/Default.cshtml
+++ b/LanchesMAC/Views/Shared/Components/CategoriaCarrinhoCompra/Default.cshtml
@@ -1,17 +1,15 @@
-﻿<a asp-controller="Lanche" asp-action="List" class="dropdown-toggle" data-toggle="dropdown">
-    Mais Lanches <b class="caret"></b>
-</a>
+﻿<div class="dropdown">
+    <button asp-controller="Lanche" asp-action="List" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
+        Mais Lanches <b class="caret"></b>
+    </button>
 
-<ul class="dropdown-menu">
-    @foreach (var categoria in Model)
-    {
-        <li>
-            <a asp-controller="Lanche" asp-action="List" asp-route-categoria="@categoria.CategoriaNome">@categoria.CategoriaNome</a>
-        </li>
-    }
-    <li class="divider"></li>
+    <div class="dropdown-menu">
+        @foreach (var categoria in Model)
+        {
+            <a class="dropdown-item" asp-controller="Lanche" asp-action="List" asp-route-categoria="@categoria.CategoriaNome">@categoria.CategoriaNome</a>
+        }
+        <div class="divider"></div>
+        <a class="dropdown-item" asp-controller="Lanche" asp-action="List" asp-route-categoria="">Ver todos os lanches</a>
+    </div>
 
-    <li>
-        <a asp-controller="Lanche" asp-action="List" asp-route-categoria="">Ver todos os lanches</a>
-    </li>
-</ul>
+</div>
