--- a/LanchesMAC/Views/Shared/Components/CategoriaMenu/Default.cshtml
+++ b/LanchesMAC/Views/Shared/Components/CategoriaMenu/Default.cshtml
@@ -4,17 +4,12 @@
         Lanches <b class="caret"></b>
     </a>
 
-    <ul class="dropdown-menu">
+    <div class="dropdown-menu">
         @foreach (var categoria in Model)
         {
-            <li>
-                <a asp-controller="Lanche" asp-action="List" asp-route-categoria="@categoria.CategoriaNome">@categoria.CategoriaNome</a>
-            </li>
+            <a class="dropdown-item" asp-controller="Lanche" asp-action="List" asp-route-categoria="@categoria.CategoriaNome">@categoria.CategoriaNome</a>
         }
-        <li class="divider"></li>
-
-        <li>
-            <a asp-controller="Lanche" asp-action="List" asp-route-categoria="">Ver todos os lanches</a>
-        </li>
-    </ul>
+        <div class="divider"></div>
+        <a class="dropdown-item" asp-controller="Lanche" asp-action="List" asp-route-categoria="">Ver todos os lanches</a>
+    </div>
 </li>
