--- a/LanchesMAC/Views/Shared/_Layout.cshtml
+++ b/LanchesMAC/Views/Shared/_Layout.cshtml
@@ -26,21 +26,21 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item"><a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a></li>
-                        } 
+                        }
 
                         @if (User.Identity.IsAuthenticated)
-                         {
+                        {
                             @await Component.InvokeAsync("CarrinhoCompraResumo")
-                         }
+                        }
                     </ul>
 
-                    <form asp-controller="Lanche" asp-action="Search" method="get" class="float-right">
-                        <div class="form-group">
+                    <ul class="nav navbar-nav ml-auto">
+                        <form asp-controller="Lanche" asp-action="Search" method="get" class="form-inline mr-5">
                             <input type="text" class="form-control" placeholder="Procurar lanche" name="searchString" value="@ViewData["searchString"]" />
-                        </div>
-                    </form>
+                        </form>
 
-                    <partial name="_LoginPartial" />
+                        <partial name="_LoginPartial" />
+                    </ul>
 
                 </div>
             </div>
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - LanchesMAC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - LanchesMAC</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
